2008-04-22
  - updating compiler to 0.3.1 release of vala
  
2008-04-
  - making source compatible with nullable? types

2008-04-10
  - solved issue #5 

2008-04-07
  - fixed issue #9

2008-04-02
  - refactoring to fix bug #6 succedeed - still some cleanup to do

2008-03-24
  - 0.2.0.1 release
  - now gtkamlc attempts to match the line numbers from your vala code 
    when generating the whole vala output

2008-03-20
  - bumped version to 0.2.0.1
  - removing generated content (if --save-temps not specified)
  - removing unwanted debug output
  - fixed issue #8

2008-03-03
  - 0.2.0.0 release
  - cast gtkaml:existing expressions to the tag type
  - use user data directories
  - updated GtkamlCompiler with latest ValaCompiler changes (create a .patch)
  - check my version against source version and issue a warning

2008-03-02
  - finished adding default values to *.implicits
  - fixed vala-0.1.7 compile errors

2008-03-02
  - finished adding default values to *.implicits
  - fixed vala-0.1.7 compile errors


2008-02-28
  - renamed gtkaml:reference to gtkaml:existing
  - introduced gtkaml:standalone

2008-02-21
  - added gtkaml:implements
  - allow hyphen-separated attributes
  - adding ImplicitsStore to resolve symbols from multiple *.implicits files

2008-02-20
  - changed gtkaml:construct and preconstruct behaviour to match signals'

2008-02-11
  - added support for gtkaml:construct and gtkaml:preconstruct attrs
    Construct goes after all the children have been added, and
    preconstruct goes right before the element has been created 
    (or, in the case of root, right before setting the minimum
    attributes of the base creation method)

2008-02-10
  - bumped version to 0.2.0.0
  - removed dependency between SAXParser and CodeGenerator (moved
    the parse/resolve/generate 'process' in Gtkaml.Parser)
  - enforced specifying the constructor parameters for the root tag

2008-02-08
  - fixed a segfault where a g_strjoinv () was called without a last NULL