@@ -1,4 +1,4 @@
-AC_INIT([gtkaml],[0.2.1.1])
+AC_INIT([gtkaml],[0.2.2.0])
 
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AM_CONFIG_HEADER(config.h)
@@ -45,7 +45,7 @@ PKG_CHECK_MODULES([LIBXML2], libxml-2.0)
 AC_SUBST(LIBXML2_CFLAGS)
 AC_SUBST(LIBXML2_LIBS)
 
-PKG_CHECK_MODULES(VALA, vala-1.0 >= 0.3.3)
+PKG_CHECK_MODULES(VALA, vala-1.0 >= 0.3.5)
 AC_SUBST(VALA_CFLAGS)
 AC_SUBST(VALA_LIBS)
 
