@@ -1,3 +1,9 @@
+2008-08-17
+  - fixed a bug that prevented gtkaml on erroring out when a tag looked like an attached attribute (i.e. it was not a class) but then had no attribute value (or subtags)
+ 
+2008-08-16
+  - updating to vala 0.3.3-0.3.5: changing [Import] to extern 
+
 2008-04-22
   - updating compiler to 0.3.1 release of vala
   
